--- a/packages/mdc-button/_button-base.scss
+++ b/packages/mdc-button/_button-base.scss
@@ -212,7 +212,8 @@
     }
   }
 
-  &:disabled {
+  &:disabled,
+  &.mdc-button-disabled {
     @include feature-targeting.targets($feat-structure) {
       cursor: default;
       pointer-events: none;
